--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 					</div>
 					</div>
 				</section>
-				<section><h3>slide 2</h3></section>
+				<section data-background-image="http://example.com/image.png"><h3>slide 2</h3></section>
+				
 			</div>
 		</div>
 
@@ -46,6 +47,8 @@
 			// - https://revealjs.com/initialization/
 			// - https://revealjs.com/config/
 			Reveal.initialize({
+				width: 960,
+  				height: 700,
 				hash: true,
 				transition:'none',
 				appearance: {
