--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 		<title>Dual22-23_Centro</title>
-		<link rel="shortcut icon" href="favicon.png">
+		<link rel="shortcut icon" href="sources/favicon1.svg">
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
 		<link rel="stylesheet" href="dist/theme/serif.css">
@@ -31,7 +31,7 @@
 					</div>
 					</div>
 				</section>
-				<section data-transition="zoom" data-background-opacity="0.23" data-background-size="contain" data-background-image="https://raw.githubusercontent.com/NandoVerdu/fpDualCentro/dualFpCentro/sources/Degital_marketing_SVG_1.svg"><h3>slide 2</h3></section>
+				<section data-transition="zoom" data-background-opacity="0.23" data-background-size="contain" data-background-image="https://raw.githubusercontent.com/NandoVerdu/fpDualCentro/dualFpCentro/sources/Degital_marketing_SVG_2.svg"><h3>slide 2</h3></section>
 				
 			</div>
 		</div>
