--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 					</div>
 					</div>
 				</section>
-				<section data-transition="zoom" data-background-opacity="0.23" data-background-size="contain" data-background-image="https://raw.githubusercontent.com/NandoVerdu/fpDualCentro/dualFpCentro/sources/Degital_marketing_SVG_3.svg"><h3>slide 2</h3></section>
-				
+				<section data-transition="zoom" data-background-opacity="0.23" data-background-size="contain" data-background-image="sources/Degital_marketing_SVG_3.svg"><h3>slide 2</h3></section>
+				<!--https://raw.githubusercontent.com/NandoVerdu/fpDualCentro/dualFpCentro/sources/Degital_marketing_SVG_3.svg*-->
 			</div>
 		</div>
 
