--- a/timeline.html
+++ b/timeline.html
@@ -1,4 +1,5 @@
 <section id="timeline">
+ 
     <article>
       <div class="inner">
         <span class="date">
@@ -7,7 +8,7 @@
           <span class="year">2012</span>
         </span>
         <h2>Real Decreto 1529/2012</h2>
-        <p> por el que se desarrolla el contrato para la formación y el aprendizaje y se establecen las bases de la formación profesional dual. (BOE 9/11/2012)</p>
+        <p> Por el que se desarrolla el contrato para la formación y el aprendizaje y se establecen las bases de la formación profesional dual. (BOE 9/11/2012)</p>
       </div>
     </article>
     
@@ -65,14 +66,19 @@
   margin: 0;
   padding: 0;
   font-family: Helvetica, sans-serif;
+  height:50vh !important;
+ 
 }
 
 
 
 section#timeline {
   width: 80%;
+  height:100%;
+  overflow-y: auto;
   margin: 20px auto;
   position: relative;
+  
 }
 section#timeline:before {
   content: '';
@@ -89,6 +95,7 @@ section#timeline article {
   width: 100%;
   margin: 0 0 20px 0;
   position: relative;
+ 
 }
 section#timeline article:after {
   content: '';
