--- a/index.html
+++ b/index.html
@@ -108,9 +108,10 @@
 					</div>
 				</section>
 
-				<section data-auto-animate data-autoappear>
+				<section data-transition="zoom" data-auto-animate data-autoappear>
 					<h3 data-id="vari" style="font-size:80%">Variedades de FP Dual</h3>
-					<p> La oferta de FP Dual de San Antonio de Padua corresponde a la modalidad flexible porque: </p>
+					<p style="text-align:left"> La oferta de FP Dual de <span style="text-decoration:underline;text-decoration-color:purple"> San Antonio de Padua 1</span> corresponde a la 
+						<span style="text-decoration:underline;text-decoration-color:purple">  modalidad flexible </span> porque: </p>
 					<ul>
 						<li>En la formación y evaluación del alumno participa la empresa</li>
 						<li>El periodo de realización no es ordinario: supera las 10 horas semanales (diferencia entre las 40 horas de jornada laboral y las 30 horas lectivas)</li>
@@ -119,7 +120,7 @@
 
 				</section>
 
-				<section  data-autoappear>
+				<section  data-autoappear data-background-image="sources/online_school_SVG.svg" data-background-size="cover" data-background-opacity="0.35" data-transition="zoom">
 					<h3>Funciones de la persona instructora en la empresa</h3>
 					<ul>
 						<li > <div  style="display:inline;color:white;background:purple">Formar al alumnado </div>   a su cargo durante el periodo en que realice las actividades formativas en la empresa
@@ -130,17 +131,17 @@
 						
 					</ul>
 				</section>
-				<section data-autoappear>
+				<section data-autoappear data-background-image="sources/Online_banking_SVG.svg" data-background-size="contain" data-background-opacity="0.25" data-transition="zoom">
 					<h3>Compensación económica</h3>
 					<ul>
-						<li>Las empresas colaboradoras mediante convenio amparado en la Orden 5/2022 están obligadas a compensar económicamente al alumno</li>
+						<li> <span style="text-decoration:underline;text-decoration-color:purple">  Las empresas colaboradoras </span> mediante convenio amparado en la Orden 5/2022 están <span style="text-decoration:underline;text-decoration-color:purple">  obligadas </span> a compensar económicamente al alumno</li>
 						<li>Beca Primer año > 50% · SMI</li>
 						<li>Beca Segundo año > 70% · SMI</li>
 						<li>Los importes se calculan en proporción al tiempo efectivo de estancia en la empresa</li>
 						<li>Pueden coexistir en un mismo grupo alumnos con y sin compensación económica</li>
 					</ul>
 				</section>
-					<section data-autoappear>
+					<section data-autoappear data-background-image="sources/office.svg" data-background-size="contain" data-background-opacity="0.25" data-transition="zoom">
 						<h3>Seguridad Social</h3>
 						<ul>
 							<li>Los alumnos están obligados al darse de alta en la Seguridad Social</li>
