--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 						</ul>
 
 					</section>
-					<section data-autoappear>
+					<section data-autoappear data-background-image="sources/Social_media_adv_SVG_mod.svg" data-background-size="contain" data-background-opacity="0.25" data-transition="zoom">
 							<h3>Gestiones para la búsqueda de empresas interesadas en formación Dual</h3>
 							<p style="text-align:left">El Dto. de Gestión ha iniciado contactos con 8 empresas del entorno</p>
 							<p style="text-align:left">De momento existen 2 empresas que se han interesado:</p>
